Use min-height 6em to fix some layout problems in overview.

--- a/app/stylesheets/partials/content/_application.sass
+++ b/app/stylesheets/partials/content/_application.sass
@@ -148,6 +148,9 @@ form #possible_answer_list
     list-style: decimal
 
 // Overview
+ul.overview-list.level-1 >li
+  min-height: 6em
+
 +overview-icon-48('nav_questions')
 +overview-icon-48('nav_answers')
 +overview-icon-48('nav_quizzes')
